[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/assets/logo.png" type="Texture" id=1]
[ext_resource path="res://code/title_screen.gd" type="Script" id=2]
[ext_resource path="res://asset/assets/theme_btn.theme" type="Theme" id=3]

[node name="title_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -160.0
margin_right = 160.0
margin_bottom = 96.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start game"

[node name="btn_continue" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 150.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "continue"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "exit"
[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_continue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
